future page, nexgen spacing issues at bottom

--- a/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
+++ b/wp-content/themes/conall-child/src/scss/pages/page-tomorrow.scss
@@ -364,7 +364,7 @@ div#section-hsform-outer-tom.edh-section {
 @media all and (max-width: 1500px) {
     div#section-nexgen {
     background-color: $white;
-    aspect-ratio: 1920/2500;
+    /* aspect-ratio: 1920/2500; */
     padding-top: 100px !important;
     div#col-nexgen {
         div#nextgen-row1 {
@@ -678,7 +678,7 @@ div#section-hsform-outer-tom.edh-section {
     /* ************ DOUBLE ICON NAV SECTION ************ */
     div#section-nexgen {
     background-color: $white;
-    aspect-ratio: 920/3000;
+    /* aspect-ratio: 920/3000; */
     top: -20px;
     div#col-nexgen {
         div#nextgen-row1 {
